feat：增加可选功能，是否自动注册所有hook app的handlers

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Headwolf框架</string>
+    <string name="hook_app_handlers">自动注册hook app的handlers</string>
 </resources>
