feat：还是没绕过Android 10的XSharedPreferences坑，只能在InitZygote期间获取

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Headwolf框架</string>
     <string name="hook_app_handlers">自动注册hook app的handlers</string>
+    <string name="content_change">修改内容</string>
 </resources>
